# forge

./: Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  dist-workspace.toml  fnox.toml  hk.pkl  mise.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
.zed/: settings.json
src/: cli.rs  commands.rs  main.rs  steps.rs
src/commands/: env.rs  init.rs
src/commands/env/: generate.rs  set.rs
src/steps/: age.rs  hk.rs
