[package]
name = "forge"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/naylour/forge"
description = "Setup utility for ingot-based projects"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
which = "8"
dirs = "6"

[profile.dist]
inherits = "release"
lto = "thin"
