[workspace]
members = []
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
repository = "https://github.com/naylour/forge"
authors = ["@naylour"]
license = "MIT"
rust-version = "1.96.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
which = "8"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
miette = { version = "7", features = ["fancy"] }


[package]
name = "forge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Setup utility for ingot-based projects"
readme = "README.md"

[[bin]]
name = "forge"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
which = { workspace = true }
dirs = { workspace = true }
miette = { workspace = true }
console = "0.16"
demand = "2"
tabled = { version = "0.20", features = ["ansi"] }

[profile.dist]
inherits = "release"
lto = "thin"
